# TokenCheck

./: .gitignore  CMakeLists.txt  README.md
android/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/gradle_fallback/wrapper/: gradle-wrapper.properties
android/res/drawable/: widget_background.xml
android/res/layout/: glm_widget.xml  tokencheck_widget.xml
android/res/values/: strings.xml
android/res/xml/: glm_widget_info.xml  tokencheck_widget_info.xml
android/src/com/glm/usage/: GlmUsageWidget.java  WidgetDataStore.java
src/: androidprefs.cpp  androidprefs.h  appsettings.cpp  appsettings.h  main.cpp  platform_descriptor.h  platform_handler.h  platform_registry.cpp  platform_registry.h  platformconfig.h  usagequery.cpp  usagequery.h  widgetbridge.cpp  widgetbridge.h
src/qml/: DetailPage.qml  MainContentPage.qml  MainPage.qml  PlatformEditPage.qml  SettingsPage.qml  Theme.qml
